--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "eslintConfig": {
     "extends": "eda",
+    "parser": "babel-eslint",
     "ignorePatterns": [
       "bundle.js"
     ]
@@ -51,6 +52,7 @@
     "@babel/preset-env": "7.13.0",
     "@babel/preset-react": "7.12.13",
     "@testing-library/react": "11.2.5",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "eslint": "7.9.0",
     "eslint-config-eda": "0.1.4",
